# lab_tools

./: .gitignore  README.md  pyproject.toml
CV_Analysis/: pyproject.toml
CV_Analysis/cv_analyzer/: __init__.py  __main__.py  analysis.py  cli.py  exporter.py  parser.py  plotting.py  reference.py
CV_Analysis/docs/: usage.md
CV_Analysis/example/: python_usage.py
CV_Analysis/example/batch_example/: 009.csv  009_blank.csv  012.csv  012_blank.csv  017.csv  017_blank.csv  018.csv  018_blank.csv  021_1.csv  021_2.csv  021_blank.csv  022_1.csv  022_2.csv  022_blank.csv  023.csv  023_blank.csv  024.csv  024_blank.csv  027.csv  027_blank.csv  028.csv  028_blank.csv  034.csv  034_blank.csv  036.csv  036_blank.csv  037.csv  037_blank.csv  039.csv  039_blank.csv  042.csv  042_blank.csv  043.csv  043_blank.csv  044.csv  044_blank.csv  046.csv  046_blank.csv  048.csv  048_blank.csv
CV_Analysis/example/irreversible/: blank1.csv  thioamide_2_1.csv
